step 1 markup done

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,3 +5,17 @@
     --ff-ubuntu: 'Ubuntu', sans-serif;
 
 }
+
+.step-type p,
+.step-type h2{
+    text-transform: uppercase;
+}
+
+
+
+@media (min-width: 650px) {
+    
+    .container{
+        
+    }
+}
