--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,21 @@
     box-sizing: border-box;
     font-family: var(--ff-ubuntu);
 }
-button, a, .step-circle{
+.flex-row{
+    display: flex;
+}
+.flex-column{
+    display: flex;
+    flex-direction: column;
+}
+.j-center{
+    justify-content: center;
+}
+.j-between{
+    justify-content: space-between;
+}
+
+button, a, .step-circle, .switch{
     cursor: pointer;
 }
 label{
@@ -133,6 +147,68 @@ body{
 .step-information-one{
     display: none;
 }
+/* Step 2 */
+.step-information-two footer{
+    display: none;
+}
+.billing{
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+}
+.billing-opt{
+    display: flex;
+    padding: 15px;
+    border: 1px solid var(--cool-gray);
+    border-radius: 10px;
+    transition: all .4s;
+}
+.billing-opt:hover{
+    border: 1px solid var(--marine-blue);
+    background: var(--magnolia);
+}
+.billing-opt img{
+    width: 40px;
+    margin-right: 15px;
+}
+.billing-opt h3{
+    font-size: var(--fs-200);
+    color: var(--marine-blue);
+}
+.billing-opt p{
+    font-size: var(--fs-200);
+    color: var(--cool-gray);
+    margin-top: 5px;
+}
+
+.billing-duration{
+    background: var(--magnolia);
+    padding: 10px 0;
+    border-radius: 10px;
+    margin-top: 30px;
+}
+.billing-duration p{
+    font-size: var(--fs-200);
+    font-weight: var(--fw-500);
+    display: flex;
+    align-items: center;
+}
+.switch{
+    background: var(--marine-blue);
+    border-radius: 20px;
+    width: 45px;
+    padding: 5px 5px;
+    display: flex;
+    align-items: center;
+    margin: 0 20px;
+}
+.switch > div{
+    background: var(--white);
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+}
+
 .primary-header{
     color: var(--marine-blue);
     font-size: var(--fs-400);
@@ -157,11 +233,20 @@ body{
     top: 90vh;
     padding: 0 20px;
 }
+.mobile-footer.j-between{
+    justify-content: space-between;
+}
+.go-back{
+    background: none;
+    border: none;
+    font-size: var(--fs-200);
+    color: var(--cool-gray);
+}
 .next-step-btn{
     border-radius: 5px;
     border: none;
     color: var(--white);
-    font-size: var(--fs-250);
+    font-size: var(--fs-200);
     font-weight: var(--fw-400);
     background: var(--marine-blue);
     padding: 15px 20px;
@@ -229,7 +314,7 @@ body{
 
     .step-information > div{
         width: 100%;
-        padding: 40px 80px 0;
+        padding: 40px 60px 0;
         background: none;
         margin: 0;
         border-radius: none;
@@ -239,6 +324,23 @@ body{
         justify-content: flex-end;
         margin-top: 60px;
     }
+
+    /* Step 2 */
+    .step-information-two footer{
+        display: block;
+    }
+    .billing{
+        flex-direction: row;
+    }
+    .billing-opt{
+        width: 30%;
+        flex-direction: column;
+    }
+    .billing-opt > div{
+        margin-top: 40px;
+    }
+    
+
     .next-step-btn{
         padding: 10px 15px;
     }
